fix javac warnings with newer JDKs